[package]
name = "buyTheBoop"
version = "0.1.0"
authors = ["Felix Gittermann <fgitter@gmx.de>"]
edition = "2021"

[dependencies]
websocket = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_urlencoded="0.7.0"
log = "0.4.6"
chrono = "0.4.6"
libmath="0.2.1"
env_logger = "0.9.0"
cast = "0.3.0"
hmac="0.12.0"
sha2="0.10.1"
lazy_static = "1.3.0"
crossbeam = "0.8.1"
simple-error = "0.2.1"
base64="0.13.0"
flate2 = "1.0"
reqwest = "0.11.8"
uuid = { version = "0.8.2", features = ["v3"] }
async-trait = "0.1.52"
anyhow = "1.0"

[dev-dependencies]
async-std = {version="1", features= ["attributes", "tokio1"]}
pretty_assertions = "1.0.0"
